# rethinkdb-python

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml
docs/: modules.rst  requirements.txt  rethinkdb.rst
rethinkdb/: ast.py  encoder.py  errors.py  handshake.py  query.py  repl.py  utilities.py
scripts/: convert_protofile.py  install-db.sh
tests/: test_encoder.py  test_errors.py  test_handshake.py  test_query.py  test_repl.py  test_utilities.py
tests/integration/: test_ast.py  test_repl.py  test_utilities.py
