[tool.poetry]
name = "rethinkdb"
version = "2.5.0"
license = "Apache-2.0"
description = "Python client for RethinkDB."
documentation = "https://rethinkdb.com/api/python/"
repository = "https://github.com/rethinkdb/rethinkdb-python/"
readme = "README.rst"
keywords = ["database", "rethinkdb", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Typing :: Typed",

]
authors = [
    "Gábor Boros <gabor.brs@gmail.com>"
]
maintainers = [
    "Gábor Boros <gabor.brs@gmail.com>"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rethinkdb/rethinkdb-python/issues/"

# this should be shipped with the C++ code not the python client
# [tool.poetry.scripts]
# rethinkdb-import = 'rethinkdb.main:app'

[tool.poetry.dependencies]
pydantic = "^1.6"
python = "^3.7"
orjson = "^3.4"

[tool.poetry.dev-dependencies]
bandit = "^1.6"
black = { version = "^20.8b1", allow-prereleases = true }
coverage = "^5.3"
flake8 = "^3.8"
hypothesis = "^5.37.1"
mypy = "^0.782"
pylint = "^2.6"
pytest = "^6.1.1"
sphinx_rtd_theme = "^0.5.0"

[tool.poetry.extras]
# Here comes the Trio, Twisted, etc extras

[tool.black]
target-version = ['py38']

[tool.isort]
atomic = true
case_sensitive = true
combine_star = true
force_sort_within_sections = true
include_trailing_comma = true
order_by_type = true
line_length = 88  # Same as Black's line length
multi_line_output = 3

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
